<resources>
    <!--app name-->
    <string name="app_name">Jabar Jakarta Travel</string>

    <!--tabs-->
    <string name="tab_pergi">Pergi</string>
    <string name="tab_pulang">Pulang</string>

    <!--labels-->
    <string name="label_no_internet_connection">Tidak ada koneksi internet..</string>
    <string name="label_kode_tiket_klik_tombol_cek_tiket">Kode Tiket : Silakan klik tombol cek tiket </string>

    <!--drawers-->
    <string name="drawer_developed_by">Developed by The Deadliners Squad</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_cek">Cek Kode Tiket</string>
    <string name="drawer_cara_bayar">Cara Bayar</string>


    <!--toast-->
    <string name="toast_main_menu">Anda telah berada di menu utama..</string>

    <!--hints-->
    <string name="hint_nama">Atas Nama</string>
    <string name="hint_nomor_ktp">Nomor Ktp</string>
    <string name="hint_nomor_telepon">Nomor Telepon</string>
    <string name="hint_nomor_rekening">Nomor Rekening</string>
    <string name="hint_id_transaksi">ID Transaksi</string>


    <!--buttons-->
    <string name="button_tanda_minus">-</string>
    <string name="button_tanda_plus">+</string>
    <string name="button_pesan">Pesan</string>
    <string name="button_cek_kode_tiket">Cek Tiket</string>
    <string name="button_ambil_tiket_baru">Ambil Tiket Baru</string>
    <string name="button_hubungi_call_center">Hubungi Call Center</string>

    <!--bank bca-->
    <string name="header_bca">ATM BCA</string>
    <string name="bca_1">Masukan kartu ATM BCA Anda beserta dengan PIN seperti biasa.</string>
    <string name="bca_2">Pilih menu TRANSFER dan klik BCA Virtual Akun.</string>
    <string name="bca_3">Masukkan kode perusahaan Jabar Jakarta Travel : 38821 lalu masukkan nomor invoice (pojok kiri atas) Contoh : 571 .</string>
    <string name="bca_4">Masukkan jumlah nominal yang dibayarkan (pojok kanan atas halaman ini).</string>
    <string name="bca_5">Ikuti instruksi yang tertera hingga transaksi selesai.</string>
    <string name="bca_6" />
    <string name="bca_7" />
    <string name="bca_8" />
    <string name="bca_9" />

    <string name="bca_3_shortcut">Masukkan kode perusahaan Jabar Jakarta Travel : 38821 lalu masukkan nomor ID transaksi. Contoh : 38821123456789.</string>
    <string name="bca_4_shortcut">Masukkan jumlah nominal yang dibayarkan.</string>

    <!--bank mandiri-->
    <string name="header_mandiri">ATM Mandiri</string>
    <string name="mandiri_1">Masukan Kartu ATM Mandiri beserta PIN Anda</string>
    <string name="mandiri_2">Pilih menu Pembayaran / Pembelian (Payment / Purchase).</string>
    <string name="mandiri_3">Pilih menu Lainnya (Others).</string>
    <string name="mandiri_4">Pilih menu Lainnya (Others).</string>
    <string name="mandiri_5">Pilih menu Multipayment.</string>
    <string name="mandiri_6">Masukkan kode perusahaan Jabar Jakarta Travel 38821.</string>
    <string name="mandiri_7">Masukkan nomor invoice (pojok kiri atas halaman ini).</string>
    <string name="mandiri_8">Masukkan jumlah nominal yang dibayarkan (pojok kanan atas halaman ini).</string>
    <string name="mandiri_9">Ikuti instruksi yang tertera hingga transaksi selesai.</string>

    <string name="mandiri_7_shortcut">Masukkan nomor ID transaksi.</string>
    <string name="mandiri_8_shortcut">Masukkan jumlah nominal yang dibayarkan.</string>
    <string name="title_activity_login">LoginActivity</string>


    <string name="btn_start">Start</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="forgot_pass2">Forgot Password ?</string>
    <string name="send_email_text">Please enter the email you used at the time of registration to get the
 password reset instructions.</string>
    <string name="send_pass">Send Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Do not Have Account?</string>
    <string name="task_add">Add Task</string>
    <string name="task_name">Task Name</string>
    <string name="insert_date">Insert Date</string>
    <string name="category">Category</string>
    <string name="add">Add</string>
    <string name="fokus">Everyday focus increase your productivity even habit</string>
    <string name="placeholder_time">00.00</string>
    <string name="placeholder_focus_time">1.50</string>
    <string name="placeholder_date">1 Jan</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_ticket">Tiket Saya</string>
    <string name="belum_ada_tiket">Belum Ada Tiket</string>
</resources>
