<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_toLeftOf="@+id/t1"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/t1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:layout_centerHorizontal="true"/>

            <View
                android:layout_width="wrap_content"
                android:layout_height="2dp"
                android:background="#ffffff"
                android:layout_toRightOf="@+id/t1"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/username"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/username"
            android:theme="@style/CustomEditText"
            android:background="@color/colorPrimaryLight"
            android:paddingLeft="15dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/email"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email_address"
            android:theme="@style/CustomEditText"
            android:paddingLeft="15dp"
            android:background="@color/colorPrimaryLight"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:theme="@style/CustomEditText"
            android:background="@color/colorPrimaryLight"
            android:paddingLeft="15dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/confirm_pass"
            android:theme="@style/CustomEditText"
            android:background="@color/colorPrimaryLight"
            android:paddingLeft="15dp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:theme="@style/CustomButton"/>

    </LinearLayout>
</RelativeLayout>